--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     
+    <div class="container">
+        <h1 class="title">Simple Counter</h1>
+        <div class="counter-display">
+            <p id="count">0</p>
+    </div>
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
