Added html container

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <h1 class="title">Simple Counter</h1>
         <div class="counter-display">
             <p id="count">0</p>
+        </div>
+
+        
     </div>
 
 
