--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <button id="resetBtn">Reset</button>
         </div>
 
-        
+        <div class="clicks-info">
+        <p>Clicks on Increment: <span id="incCount">0</span></p>
+        <p>Clicks on Decrement: <span id="decCount">0</span></p>
+        </div>
+
     </div>
-
-
 
     <script src="script.js"></script>
 </body>
