Added html footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <p>Clicks on Decrement: <span id="decCount">0</span></p>
         </div>
 
-    </div>
+        <div class="footer">
+            <p>Made with ❤️ by <a href="https://github.com/Angkon-Kar" target="_blank">Angkon-Kar</a></p>
+        </div>
 
     <script src="script.js"></script>
 </body>
