Update html title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Counter</title>
+    <title>Digital Counter</title>
     <link rel="icon" type="image/png" href="counter.png">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>    
     <rel class="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,7 +32,8 @@
         <div class="footer">
             <p>Made with ❤️ by <a href="https://github.com/Angkon-Kar" target="_blank">Angkon-Kar</a></p>
         </div>
-
+    
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
