Created story button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <button id="resetBtn">Reset</button>
         </div>
 
+        <button id="storyBtn">✨ Get Counter Story ✨</button>
+        <div class="story-display" id="storyDisplay">
+            Click "✨ Get Counter Story ✨" to get a fun fact or story!
+        </div>
+
         <div class="clicks-info">
         <p>Clicks on Increment: <span id="incCount">0</span></p>
         <p>Clicks on Decrement: <span id="decCount">0</span></p>
