--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>Clicks on Decrement: <span id="decCount">0</span></p>
         </div>
     
-    </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
