--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <title>Digital Counter</title>
 
-    <link rel="icon" type="image/png" href="counter.png">
+    <link rel="icon" type="image/png" href="assets/counter.png">
     
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
     <script src="https://cdn.tailwindcss.com"></script>
