--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         </div>
     
     </main>
+
+    <audio id="clickSound" src="assets/click.mp3"></audio>
+    
     <script src="script.js"></script>
 </body>
 </html>
