--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </main>
 
     <audio id="clickSound" src="assets/click.mp3"></audio>
-    
+    <audio id="resetSound" src="assets/reset.mp3"></audio>
+
     <script src="script.js"></script>
 </body>
 </html>
