--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <audio id="clickSound" src="assets/click.mp3"></audio>
     <audio id="resetSound" src="assets/reset.mp3"></audio>
-
+    <audio id="toggleSound" src="assets/toggle.mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
